--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 @import "tailwindcss";
 @layer base {
-  h1 {
-    @apply text-6xl font-bold text-center;
-  }
   h2 {
-    @apply text-3xl text-center;
+    @apply text-xl sm:text-3xl text-center;
   }
   header {
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
@@ -16,6 +13,13 @@
     font-weight: bold;
   }
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; /* Prevent horizontal scroll */
+}
 .show1 {
   animation: pop-left 1s;
 }
@@ -25,7 +29,8 @@
 .hero-text,
 .brand,
 .projects,
-.feedback {
+.feedback,
+.modal {
   animation-fill-mode: forwards;
 }
 .apartment-img {
@@ -47,6 +52,15 @@
   100% {
     opacity: 1;
     transform: translateX(-20%);
+  }
+}
+@keyframes nav-left {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(-100%);
   }
 }
 @keyframes pop-right {
