--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  overflow-x: hidden; /* Prevent horizontal scroll */
+  scroll-behavior: smooth;
 }
 .show1 {
   animation: pop-left 1s;
